# JSON-Query

./: .gitignore  CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.hpp  JSONParser.cpp  JSONParser.hpp  Model.cpp  Model.hpp  README.md  Testing.hpp  code-review.txt  main.cpp  makefile  test.json  test.txt
